Introduced secondary contrast color. Improved highlighting in formated search results. Fixed wrong highlighting on non word characters.

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -42,4 +42,9 @@ body.body--dark
   .q-field--dark .q-field__control:before,
     border-color: var(--q-color-border)
 
-  
+.bold
+  color: $secondary
+  font-weight: 600
+
+.bref
+  color: $primary
