--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,26 +12,17 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #9C27B0
-$secondary : #26A69A
-$accent    : #9C27B0
+$primary: #1976D2
+$secondary: #d27619
+$accent: #d21976
+$accent1: #9C27B0
 
 $background: #ffffff
-$border    : darken($background, 20%)
+$border: darken($background, 20%)
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$positive: #21BA45
+$negative: #C10015
+$info: #31CCEC
+$warning: #F2C037
 
-$amarant   : #b11848
-
-$primary-light    : green
-$background-light : #ffffff
-$border-light     : darken($background, 20%)
-$disabled-light   : darken($background, 10%)
-
-$primary-dark     : #3b88d4
-$background-dark  : #252525
-$border-dark      : darken($background, 20%)
-$disabled-dark    : darken($background, 10%)
+$amarant: #b11848
